Update INSTALL.md
Fix installation instructions related to SAP IDM dispatcher classpath